--- a/src/Web/Web.MVC/Web.MVC/Views/Admin/GetBansHistory.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Admin/GetBansHistory.cshtml
@@ -2,59 +2,79 @@
     ViewData["Title"] = "История банов";
 }
 @model Web.MVC.Models.ViewModels.AdminViewModels.GetBansHistoryViewModel
+<link rel="stylesheet" href="~/css/NextPreviousPaginationBtns.css"/>
+<link rel="stylesheet" href="~/css/admin/GetBansHistory.css"/>
+<link rel="stylesheet" href="~/css/SearchForm.css"/>
 
-<div class="text-center">
-    <form method="get">
-        <input name="searchingQuery" placeholder="Поиск" />
-        <input name="pageSize" type="hidden" value="@Model.PageSize"/>
-        <input name="pageNumber" type="hidden" value="1"/>
-        <input type="submit" value="найти"/>
-    </form>
-    @if (Model.Bans.Count == 0)
-    {
-        <p>История банов пуста</p>
-    }
-    else
-    {
-        <table>            
-            <tr><th>Имя пользователя</th><th>Причина</th><th>Тип бана</th><th>Кем забанен</th><th>Забанен с</th><th>Забанен до</th><th>Длительность бана (в днях)</th></tr>
-            @foreach (var ban in Model.Bans)
-            {
-                <tr><td>@ban.UserName</td><td>@ban.Reason</td><td>@ban.BanType</td><td>@ban.BannedBy</td><td>@ban.BannedFrom</td><td>@ban.BannedUntil</td><td>@ban.DurationInDays</td></tr>
-            }
-        </table>
-    }
+<form method="get" class="search-form">
+    <input class="search-input" name="searchingQuery" placeholder="Поиск..." />
+    <input name="pageSize" type="hidden" value="@Model.PageSize"/>
+    <input name="pageNumber" type="hidden" value="1"/>
+    <input class="search-submit" type="submit" value="Найти"/>
+</form>
+@if (Model.Bans.Count == 0)
+{
+    <h3>История банов пуста</h3>
+}
+else
+{
+    <table>            
+        <tr><th>Имя пользователя</th><th>Причина</th><th>Тип бана</th><th>Кем забанен</th><th>Забанен с</th><th>Забанен до</th><th>Длительность бана (в днях)</th></tr>
+        @foreach (var ban in Model.Bans)
+        {
+            <tr><td>@ban.UserName</td><td>@ban.Reason</td><td>@ban.BanType</td><td>@ban.BannedBy</td><td>@ban.BannedFrom</td><td>@ban.BannedUntil</td><td>@ban.DurationInDays</td></tr>
+        }
+    </table>
+}
     
-    @if (Model.PreviousPageNumber != 0 && Model.Bans.Count != 0)
+
+<div class="pagination-link-container">
+    @if (Model.Bans.Count != 0)
     {
-        @if (Model.SearchingQuery is null)
+        if (Model.PreviousPageNumber != 0)
         {
-            <a asp-controller="Admin" asp-action="GetBansHistory" asp-route-pageNumber="@Model.PreviousPageNumber" asp-route-pageSize="@Model.PageSize">
-                Назад
-            </a>
+            @if (Model.SearchingQuery is null)
+            {
+                <a class="pagination-link-previous" asp-controller="Admin" asp-action="GetBansHistory" asp-route-pageNumber="@Model.PreviousPageNumber"
+                   asp-route-pageSize="@Model.PageSize">
+                    Назад
+                </a>
+            }
+            else
+            {
+                <a class="pagination-link-previous" asp-controller="Admin" asp-action="GetBansHistory" asp-route-pageNumber="@Model.PreviousPageNumber"
+                   asp-route-pageSize="@Model.PageSize"asp-route-searchingQuery="@Model.SearchingQuery">
+                    Назад
+                </a>
+            }
         }
         else
         {
-            <a asp-controller="Admin" asp-action="GetBansHistory" asp-route-pageNumber="@Model.PreviousPageNumber" asp-route-pageSize="@Model.PageSize"
-               asp-route-searchingQuery="@Model.SearchingQuery">
-                Назад
-            </a>
+            <a class="pagination-link-previous-doesnt-exist">Назад</a>
         }
     }
-    @if (Model.DoesNextPageExist && Model.Bans.Count != 0)
+    @if (Model.Bans.Count != 0)
     {
-        @if (Model.SearchingQuery is null)
+        if (Model.DoesNextPageExist)
         {
-            <a asp-controller="Admin" asp-action="GetBansHistory" asp-route-pageNumber="@Model.NextPageNumber" asp-route-pageSize="@Model.PageSize">
-                Вперед
-            </a>
+            @if (Model.SearchingQuery is null)
+            {
+                <a class="pagination-link-next" asp-controller="Admin" asp-action="GetBansHistory" asp-route-pageNumber="@Model.NextPageNumber"
+                   asp-route-pageSize="@Model.PageSize">
+                    Вперед
+                </a>
+            }
+            else
+            {
+                <a class="pagination-link-next" asp-controller="Admin" asp-action="GetBansHistory" asp-route-pageNumber="@Model.NextPageNumber" asp-route-pageSize="@Model.PageSize"
+                   asp-route-searchingQuery="@Model.SearchingQuery">
+                    Вперед
+                </a>
+            }
         }
         else
         {
-            <a asp-controller="Admin" asp-action="GetBansHistory" asp-route-pageNumber="@Model.NextPageNumber" asp-route-pageSize="@Model.PageSize"
-               asp-route-searchingQuery="@Model.SearchingQuery">
-                Вперед
-            </a>
+            <a class="pagination-link-next-doesnt-exist">Вперед</a>
         }
     }
 </div>
