--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/Users.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/Users.cshtml
@@ -2,87 +2,75 @@
     ViewData["Title"] = "Список пользователей";
 }
 @model List<Web.MVC.Models.ApiResponses.ApNetUserResponses.AspNetUserResponse>
-@using Web.MVC.Constants
+<link rel="stylesheet" href="~/css/NextPreviousPaginationBtns.css"/>
+<link rel="stylesheet" href="~/css/SearchForm.css"/>
+<link rel="stylesheet" href="~/css/moderator/Users.css"/>
 
 <h3>Пользователи</h3>
-@if (Model.Count == 0)
+<form method="get" class="search-form">
+    <input class="search-input" name="searchingQuery" placeholder="Поиск..." />
+    <input type="hidden" name="pageNumber" value="1" />
+    <input type="hidden" name="pageSize" value="@ViewBag.CurrentPageSize" />
+    <input class="search-submit" type="submit" value="Найти" />
+</form>
+@if (Model.Count != 0)
 {
-    var searchingTypes = new SelectList(new List<string>
-    {
-        UserSearchingTypeConstants.UserNameSearchingType, UserSearchingTypeConstants.EmailSearchingType
-    }, UserSearchingTypeConstants.UserNameSearchingType);
-    <form method="get">
-        <input name="searchingQuery" placeholder="Поиск" />
-        <input type="hidden" name="pageNumber" value="1" />
-        <input type="hidden" name="pageSize" value="@ViewBag.CurrentPageSize" />
-        <select name="searchingType" asp-items="@searchingTypes"></select>
-        <input type="submit" value="найти" />
-    </form>
-    <h5>Список пользователей пуст</h5>
-}
-else
-{
-    var searchingTypes = new SelectList(new List<string>
-    {
-        UserSearchingTypeConstants.UserNameSearchingType, UserSearchingTypeConstants.EmailSearchingType
-    }, UserSearchingTypeConstants.UserNameSearchingType);
-    <form method="get">
-        <input name="searchingQuery" placeholder="Поиск"/>
-        <input type="hidden" name="pageNumber" value="1"/>
-        <input type="hidden" name="pageSize" value="@ViewBag.CurrentPageSize" />
-        <select name="searchingType" asp-items="@searchingTypes"></select>
-        <input type="submit" value="найти"/>
-    </form>
     <table>
-        <tr><th>Имя пользователя</th><th>Почта</th><th>Подтверждена почта</th><th>Назначить роль</th></tr>
+        <tr><th>Имя пользователя</th><th>Почта</th><th>Подтверждена почта</th></tr>
         @foreach (var user in Model)
         {
-            if (Context.Request.QueryString.HasValue)
-            {
-                var returnUrl = Context.Request.Path + Context.Request.QueryString;
-                <tr><th><a asp-controller="User" asp-action="GetUser" asp-route-userName="@user.UserName">@user.UserName</a></th><th>@user.Email</th><th>@user.EmailConfirmed</th><th><a asp-action="ChangeUserRoles" asp-controller="Moderator" asp-route-returnUrl="@returnUrl" asp-route-aspNetUserId="@user.Id">назначить роль</a></th></tr>
-            }
-            else
-            {
-                <tr><th><a asp-controller="User" asp-action="GetUser" asp-route-userName="@user.UserName">@user.UserName</a></th><th>@user.Email</th><th>@user.EmailConfirmed</th><th><a asp-action="ChangeUserRoles" asp-controller="Moderator" asp-route-returnUrl="@Context.Request.Path" asp-route-aspNetUserId="@user.Id">назначить роль</a></th></tr>
-            }
-            
+            <tr><td><a class="get-user-link" asp-controller="User" asp-action="GetUser" asp-route-userName="@user.UserName">@user.UserName</a></td><td>@user.Email</td><td>@user.EmailConfirmed</td></tr>
         }
     </table>
 }
 
-
-
-@if (ViewBag.PreviousPageNumber != 0 && Model.Count != 0)
-{
-    @if (ViewBag.SearchingQuery is null)
+<div class="pagination-link-container">
+    @if (Model.Count != 0)
     {
-        <a asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.PreviousPageNumber" asp-route-pageSize="@ViewBag.CurrentPageSize">
-            &lt; Назад
-        </a>
+        if (ViewBag.PreviousPageNumber != 0)
+        {
+            @if (ViewBag.SearchingQuery is null)
+            {
+                <a class="pagination-link-previous" asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.PreviousPageNumber"
+                   asp-route-pageSize="@ViewBag.CurrentPageSize">
+                    Назад
+                </a>
+            }
+            else
+            {
+                <a class="pagination-link-previous" asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.PreviousPageNumber"
+                   asp-route-pageSize="@ViewBag.CurrentPageSize" asp-route-searchingQuery="@ViewBag.SearchingQuery">
+                    Назад
+                </a>
+            }
+        }
+        else
+        {
+            <a class="pagination-link-previous-doesnt-exist">Назад</a>
+        }
     }
-    else
+    @if (Model.Count != 0)
     {
-        <a asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.PreviousPageNumber" asp-route-pageSize="@ViewBag.CurrentPageSize"
-           asp-route-searchingQuery="@ViewBag.SearchingQuery" asp-route-searchingType="@ViewBag.SearchingType">
-            &lt; Назад
-        </a>
+        if (ViewBag.DoesNextPageExist)
+        {
+            @if (ViewBag.SearchingQuery is null)
+            {
+                <a class="pagination-link-next" asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.NextPageNumber"
+                   asp-route-pageSize="@ViewBag.CurrentPageSize">
+                    Вперед
+                </a>
+            }
+            else
+            {
+                <a class="pagination-link-next" asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.NextPageNumber"
+                   asp-route-pageSize="@ViewBag.CurrentPageSize" asp-route-searchingQuery="@ViewBag.SearchingQuery">
+                    Вперед
+                </a>
+            }
+        }
+        else
+        {
+            <a class="pagination-link-next-doesnt-exist">Вперед</a>
+        }
     }
-}
-@if (ViewBag.DoesNextPageExist && Model.Count != 0)
-{
-    @if (ViewBag.SearchingQuery is null)
-    {
-        <a asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.NextPageNumber" asp-route-pageSize="@ViewBag.CurrentPageSize">
-            Вперед &gt;
-        </a>
-    }
-    else
-    {
-        <a asp-controller="Moderator" asp-action="Users" asp-route-pageNumber="@ViewBag.NextPageNumber" asp-route-pageSize="@ViewBag.CurrentPageSize"
-           asp-route-searchingQuery="@ViewBag.SearchingQuery" asp-route-searchingType="@ViewBag.SearchingType">
-            Вперед &gt;
-        </a>
-    }
-}
-    
+</div>
