--- a/src/Web/Web.MVC/Web.MVC/Views/User/ChangePassword.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/ChangePassword.cshtml
@@ -2,20 +2,20 @@
     ViewData["Title"] = "Изменить пароль";
 }
 @model Web.MVC.DTOs.User.ChangePasswordDto
+<link rel="stylesheet" href="~/css/ErrorMessageSpanValidation.css"/>
+<link rel="stylesheet" href="~/css/user/ChangePassword.css"/>
 
 <h3>Изменить пароль</h3>
 
 <form method="post">
     <div asp-validation-summary="ModelOnly"></div>
+    <span class="validation-message" asp-validation-for="OldPassword"></span>
+    <span class="validation-message" asp-validation-for="NewPassword"></span>
     <div>
-        <label asp-for="OldPassword"></label><br/>
-        <input asp-for="OldPassword"/>
-        <span asp-validation-for="OldPassword"></span>
+        <input class="change-password-input" asp-for="OldPassword" placeholder="Старый пароль" />
     </div>
     <div>
-        <label asp-for="NewPassword"></label><br />
-        <input asp-for="NewPassword" />
-        <span asp-validation-for="NewPassword"></span>
+        <input class="change-password-input" asp-for="NewPassword" placeholder="Новый пароль" />
     </div>
-    <input type="submit" value="изменить"/>
+    <input class="change-password-submit" type="submit" value="Изменить"/>
 </form>
